dark mode nav fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,6 +41,10 @@ body {
       background-color: black;
       color: #eeeeee;
     }
+
+    nav ul li a {
+      background-color: black;
+    }
   }
 
   #today-date {
